# yahboom_rdk_x3_robot

src/: extra_args.py  laserscan_to_point_publish.py  yolo_detection.py
src/ROS-TCP-Endpoint/: package.xml  setup.py
src/ROS-TCP-Endpoint/launch/: endpoint_launch.py  endpoint_launch.py.backup  endpoint_launch_test.py
src/camera_pub/: package.xml  setup.py
src/camera_pub/camera_pub/: camera_publisher.py  config.yaml  test.py  utils.py
src/camera_pub/launch/: camera_controller_launch.py
src/controller_sub/: package.xml  setup.cfg  setup.py
src/controller_sub/controller_sub/: config.yaml  controller_subscriber.py  utils.py
sunriseRobot/Samples/1_Basic/: 1_test_sunriseRobot.ipynb  (+5 more)
sunriseRobot/SunriseRobotLib/: .gitignore
sunriseRobot/app_SunriseRobot/: .gitignore  _start_joystick.sh  ai_agent.py  ai_agent_usb_camera_v1.py  ai_agent_usb_camera_v2.py  app_SunriseRobot.py  args.py  camera.py  compile.py  config.yaml  detector.py  detector_usb_camera_v1.py  detector_usb_camera_v2.py  fan.py  global_constants.py  gpio_pin_control.py  joystick.py  kill_oled.sh  kill_process.py  kill_program.sh  light.py  lights.py  main_thread.py  oled.py  robot_body.py  robot_head.py  start_app.sh  start_robot_control.desktop  start_robot_control.sh  start_ros2.sh  test_magic_detection.py  test_single_pin.py  tracker.py  useful_commands.txt  utils.py
sunriseRobot/hotspot/: close_AP.sh  open_AP.desktop  open_AP.sh
sunriseRobot/my_service/: yahboom_jupyterlab.service  yahboom_oled.service
sunriseRobot/script_launchers/: start_fan_service.desktop  start_fan_service.sh  start_robot_control.desktop  start_robot_control.sh  start_ros2.sh
yahboomcar_ws_src/src/yahboomcar_kcftracker/: CMakeLists.txt  package.xml
yahboomcar_ws_src/src/yahboomcar_kcftracker/include/yahboomcar_kcftracker/: KCF_Tracker.h  PID.cpp  PID.h
yahboomcar_ws_src/src/yahboomcar_kcftracker/launch/: kcftracker_launch.xml
yahboomcar_ws_src/src/yahboomcar_kcftracker/src/: KCF_Tracker.cpp
(+118 files in other folders)
